# crs-utils

./: README.md  setup.cfg
src/crs_utils/: direct.py  ps.py  service_auth.py
tests/unittests/: __init__.py  test_direct.py  test_example.py  test_ps.py  test_service_auth.py
tests/unittests_utils/: common.py  mock_classes.py  unittest_loader.py
