[metadata]
name = crs-utils-mjpcollins
version = 1.0.0
author = Matt Collins
author_email = matthewjpcollins@gmail.com
description = Helper methods for Cloud Run Services
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    = requests
python_requires = >=3.6

[options.packages.find]
where = src