[metadata]
name = crs-utils-mjpcollins
version = 1.0.4
author = Matt Collins
author_email = matthewjpcollins@gmail.com
description = Helper methods for Cloud Run Services
long_description = file: README.md
url = https://github.com/mjpcollins/crs-utils/
download_url = https://github.com/mjpcollins/crs-utils/archive/refs/tags/v1.0.4.tar.gz
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    requests
    google-cloud-pubsub >= 2.6.0
python_requires = >=3.6

[options.packages.find]
where = src